--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "tsc && node --loader ts-node/esm src/index.ts",
     "clean": "./scripts/clean.sh",
     "start:service:all": "pm2 start pnpm --name=\"all\" --restart-delay=3000 --max-restarts=10 -- run start:all",
-    "stop:service:all": "pm2 stop all"
+    "stop:service:all": "pm2 stop all",
+    "test-post": "node --loader ts-node/esm src/test/post.ts"
   },
   "dependencies": {
     "@elizaos/adapter-postgres": "0.1.7",
@@ -33,7 +34,8 @@
     "readline": "1.3.0",
     "url": "0.11.4",
     "ws": "8.18.0",
-    "yargs": "17.7.2"
+    "yargs": "17.7.2",
+    "zod": "^3.24.1"
   },
   "engines": {
     "node": ">=22"
