--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "clean": "./scripts/clean.sh",
     "start:service:all": "pm2 start pnpm --name=\"all\" --restart-delay=3000 --max-restarts=10 -- run start:all",
     "stop:service:all": "pm2 stop all",
-    "dev:judge": "start --characters='./characters/judge.character.json'",
-    "dev:gladiator": "start --characters='./characters/gladiator.character.json'",
-    "dev:all": "start --characters='./characters/judge.character.json ./characters/gladiator.character.json'",
+    "dev:judge": "pnpm start --characters='./characters/judge.character.json'",
+    "dev:gladiator": "pnpm start --characters='./characters/gladiator.character.json'",
+    "dev:all": "pnpm start --characters='./characters/judge.character.json ./characters/gladiator.character.json'",
     "test-post": "node --loader ts-node/esm src/test/post.ts"
   },
   "dependencies": {
