feat: updated atoma model

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@ GROQ_API_KEY=gsk_*
 OPENROUTER_API_KEY=
 GOOGLE_GENERATIVE_AI_API_KEY= # Gemini API key
 
+
+ATOMA_API_KEY=
+
+ATOMA_MODEL_SMALL=meta-llama/Llama-3.3-70B-Instruct
+ATOMA_MODEL_MEDIUM=deepseek-ai/DeepSeek-R1
+ATOMA_MODEL_LARGE=deepseek-ai/DeepSeek-R1
+
 ELEVENLABS_XI_API_KEY= # API key from elevenlabs
 
 # ELEVENLABS SETTINGS
