--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@elizaos/plugin-starknet": "0.1.9",
     "@tavily/core": "0.0.2",
     "amqplib": "0.10.5",
+    "atoma-sdk": "^0.1.0",
     "better-sqlite3": "11.5.0",
     "fs": "0.0.1-security",
     "net": "1.0.2",
@@ -49,9 +50,9 @@
     }
   },
   "devDependencies": {
+    "pm2": "5.4.3",
     "ts-node": "10.9.2",
     "tsup": "8.3.5",
-    "typescript": "5.6.3",
-    "pm2": "5.4.3"
+    "typescript": "5.6.3"
   }
 }
